--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   "license": "MIT",
   "dependencies": {},
   "devDependencies": {
+    "fs": "^0.0.1-security",
+    "globule": "^1.2.0",
     "gulp": "3.9.1",
     "gulp-hb": "7.0.1",
     "gulp-rename": "^1.2.2",
     "gulp-watch": "^5.0.0",
+    "handlebars": "^4.0.11",
+    "path": "^0.12.7",
     "pump": "^3.0.0",
     "run-sequence": "^2.2.1"
   }
